--- a/project.html
+++ b/project.html
@@ -11,6 +11,7 @@
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,15 +25,31 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/magnific-popup.css">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
+
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    </script>
 </head>
+
+<style>
+    .value-img {
+        display: block;
+        text-align: center;
+    }
+
+    .value-img img {
+        max-width: 100%;
+    }
+</style>
 
 <body>
     <!-- Spinner Start -->
@@ -195,9 +212,80 @@
                         <div class="tab-pane fade" id="tab-pane-3">
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project3.jpeg"
-                                            style="object-fit: cover;" alt="">
+                                    <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
+                                        <div class="owl-carousel header-carousel position-relative">
+                                            <div class="owl-carousel-item position-relative"
+                                                data-dot="<img src='img/project3.jpeg'>">
+                                                <div class="value-img">
+                                                    <a href="img/project3.jpeg">
+                                                        <img class="img-custom" src="img/project3.jpeg"
+                                                            alt="project3" />
+                                                    </a>
+                                                </div>
+                                                <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
+                                                <div class="owl-carousel-inner-project">
+                                                    <div class="position-relative h-100">
+                                                        <div class="value-img">
+                                                            <a href="img/project3.jpeg" class="gallery-thumb">
+                                                                <img src="img/project3.jpeg" alt="about">
+                                                            </a>
+                                                        </div>
+                                                        <!-- <div class="value-img">
+                                                            <a href="img/project3.jpeg">
+                                                                <img class="img-custom" src="img/project3.jpeg"
+                                                                    alt="project3" />
+                                                            </a>
+                                                        </div> -->
+                                                        <!-- <img class="position-absolute img-fluid w-100 h-100"
+                                                            src="img/project3.jpeg" style="object-fit: cover;" alt=""> -->
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="owl-carousel-item position-relative"
+                                                data-dot="<img src='img/project3.jpeg'>">
+                                                <!-- <div class="value-img">
+                                                    <a href="img/project3.jpeg">
+                                                        <img class="img-custom" src="img/project3.jpeg"
+                                                            alt="project3" />
+                                                    </a>
+                                                </div> -->
+                                                <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
+                                                <div class="owl-carousel-inner-project">
+                                                    <div class="position-relative h-100">
+                                                        <div class="value-img">
+                                                            <a href="img/project3.jpeg">
+                                                                <img class="img-custom" src="img/project3.jpeg"
+                                                                    alt="project3" />
+                                                            </a>
+                                                        </div>
+                                                        <!-- <img class="position-absolute img-fluid w-100 h-100"
+                                                            src="img/project3.jpeg" style="object-fit: cover;" alt=""> -->
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="owl-carousel-item position-relative"
+                                                data-dot="<img src='img/project3.jpeg'>">
+                                                <div class="value-img">
+                                                    <a href="img/project3.jpeg">
+                                                        <img class="img-custom" src="img/project3.jpeg"
+                                                            alt="project3" />
+                                                    </a>
+                                                </div>
+                                                <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
+                                                <div class="owl-carousel-inner-project">
+                                                    <div class="position-relative h-100">
+                                                        <div class="value-img">
+                                                            <a href="img/project3.jpeg">
+                                                                <img class="img-custom" src="img/project3.jpeg"
+                                                                    alt="project3" />
+                                                            </a>
+                                                        </div>
+                                                        <!-- <img class="position-absolute img-fluid w-100 h-100"
+                                                            src="img/project3.jpeg" style="object-fit: cover;" alt=""> -->
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -320,9 +408,78 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="lib/jquery.magnific-popup.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <!-- <script src="js/zooming.min.js"></script> -->
+    <script>
+        new Zooming().listen('.grid img')
+    </script>
+    <script>
+        const defaultZooming = new Zooming()
+        const customZooming = new Zooming()
+        const config = customZooming.config()
+        const TRANSITION_DURATION_DEFAULT = config.transitionDuration
+        const BG_COLOR_DEFAULT = config.bgColor
+        const SCALE_BASE_DEFAULT = config.scaleBase
+        const ACTIVE_CLASS = 'button-primary'
+
+        const btnFast = document.getElementById('btn-fast')
+        const btnDark = document.getElementById('btn-dark')
+        const btnScaleSmall = document.getElementById('btn-scale-small')
+
+        document.addEventListener('DOMContentLoaded', function () {
+            defaultZooming.listen('.img-default')
+            customZooming.listen('.img-custom')
+        })
+
+        btnFast.addEventListener('click', function (event) {
+            const transitionDuration = toggleActive(btnFast)
+                ? 0.2
+                : TRANSITION_DURATION_DEFAULT
+
+            customZooming.config({ transitionDuration })
+        })
+
+        btnDark.addEventListener('click', function (event) {
+            const bgColor = toggleActive(btnDark)
+                ? 'black'
+                : BG_COLOR_DEFAULT
+
+            customZooming.config({ bgColor })
+        })
+
+        btnScaleSmall.addEventListener('click', function (event) {
+            const scaleBase = toggleActive(btnScaleSmall)
+                ? 0.7
+                : SCALE_BASE_DEFAULT
+
+            customZooming.config({ scaleBase })
+        })
+
+        function isActive(el) {
+            return el.classList.contains(ACTIVE_CLASS)
+        }
+
+        function activate(el) {
+            el.classList.add(ACTIVE_CLASS)
+        }
+
+        function deactivate(el) {
+            el.classList.remove(ACTIVE_CLASS)
+        }
+
+        function toggleActive(el) {
+            if (isActive(el)) {
+                deactivate(el)
+                return false
+            } else {
+                activate(el)
+                return true
+            }
+        }
+    </script>
 </body>
 
 </html>
