--- a/project.html
+++ b/project.html
@@ -225,11 +225,9 @@
                                                 <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
                                                 <div class="owl-carousel-inner-project">
                                                     <div class="position-relative h-100">
-                                                        <div class="value-img">
-                                                            <a href="img/project3.jpeg" class="gallery-thumb">
-                                                                <img src="img/project3.jpeg" alt="about">
-                                                            </a>
-                                                        </div>
+                                                        <a href="img/project3.jpeg" class="gallery-thumb">
+                                                            <img src="img/project3.jpeg" alt="about">
+                                                        </a>
                                                         <!-- <div class="value-img">
                                                             <a href="img/project3.jpeg">
                                                                 <img class="img-custom" src="img/project3.jpeg"
@@ -408,11 +406,10 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-    <script src="lib/jquery.magnific-popup.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <!-- <script src="js/zooming.min.js"></script> -->
+    <!-- <script src="js/zooming.min.js"></script>
     <script>
         new Zooming().listen('.grid img')
     </script>
@@ -479,7 +476,7 @@
                 return true
             }
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
