--- a/project.html
+++ b/project.html
@@ -217,10 +217,10 @@
                                             <div class="owl-carousel-item position-relative"
                                                 data-dot="<img src='img/project3.jpeg'>">
                                                 <div class="value-img">
-                                                    <a href="img/project3.jpeg">
+                                                    <!-- <a href="img/project3.jpeg">
                                                         <img class="img-custom" src="img/project3.jpeg"
                                                             alt="project3" />
-                                                    </a>
+                                                    </a> -->
                                                 </div>
                                                 <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
                                                 <div class="owl-carousel-inner-project">
