--- a/project.html
+++ b/project.html
@@ -250,9 +250,12 @@
                                                 <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
                                                 <div class="owl-carousel-inner-project">
                                                     <div class="position-relative h-100">
-                                                        <a href="img/project3.jpeg" class="gallery-thumb">
-                                                            <img src="img/project3.jpeg" alt="about">
-                                                        </a>
+                                                        <div class="value-img">
+                                                            <a href="img/project3.jpeg">
+                                                                <img class="img-custom" src="img/project3.jpeg"
+                                                                    alt="project3" />
+                                                            </a>
+                                                        </div>
                                                         <!-- <img class="position-absolute img-fluid w-100 h-100"
                                                             src="img/project3.jpeg" style="object-fit: cover;" alt=""> -->
                                                     </div>
@@ -260,18 +263,21 @@
                                             </div>
                                             <div class="owl-carousel-item position-relative"
                                                 data-dot="<img src='img/project3.jpeg'>">
-                                                <!-- <div class="value-img">
+                                                <div class="value-img">
                                                     <a href="img/project3.jpeg">
                                                         <img class="img-custom" src="img/project3.jpeg"
                                                             alt="project3" />
                                                     </a>
-                                                </div> -->
+                                                </div>
                                                 <!-- <img class="img-fluid" src="img/project3.jpeg" alt=""> -->
                                                 <div class="owl-carousel-inner-project">
                                                     <div class="position-relative h-100">
-                                                        <a href="img/project3.jpeg" class="gallery-thumb">
-                                                            <img src="img/project3.jpeg" alt="about">
-                                                        </a>
+                                                        <div class="value-img">
+                                                            <a href="img/project3.jpeg">
+                                                                <img class="img-custom" src="img/project3.jpeg"
+                                                                    alt="project3" />
+                                                            </a>
+                                                        </div>
                                                         <!-- <img class="position-absolute img-fluid w-100 h-100"
                                                             src="img/project3.jpeg" style="object-fit: cover;" alt=""> -->
                                                     </div>
