--- a/project.html
+++ b/project.html
@@ -145,7 +145,7 @@
                 <h1 class="display-5 mb-4">Visit Our Latest Projects And Our Innovative Works</h1>
             </div>
             <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="col-lg-4">
+                <div class="col-lg-2">
                     <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 active"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
@@ -165,17 +165,17 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-10">
                     <div class="tab-content w-100">
                         <div class="tab-pane fade show active" id="tab-pane-1">
                             <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
+                                <div class="col-md-8" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/project1.jpeg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <h1 class="mb-3">Asawa's Paradise</h1>
                                     <p class="mb-4">Lines are the basic of any structure
                                         and to keep the purity of form intact we decided
@@ -190,13 +190,13 @@
                         </div>
                         <div class="tab-pane fade" id="tab-pane-2">
                             <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
+                                <div class="col-md-8" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/project2.jpeg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <h1 class="mb-3">Ashiyana</h1>
                                     <p class="mb-4">The house being sited in between a busy neighborhood,
                                         the owners of this home felt the common dilemma of a requirement
@@ -211,7 +211,7 @@
                         </div>
                         <div class="tab-pane fade" id="tab-pane-3">
                             <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
+                                <div class="col-md-8" style="min-height: 350px;">
                                     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
                                         <div class="owl-carousel header-carousel position-relative">
                                             <div class="owl-carousel-item position-relative"
@@ -226,7 +226,8 @@
                                                 <div class="owl-carousel-inner-project">
                                                     <div class="position-relative h-100">
                                                         <a href="img/project3.jpeg" class="gallery-thumb">
-                                                            <img src="img/project3.jpeg" alt="about">
+                                                            <img src="img/project3.jpeg" alt="about"
+                                                                style="object-fit: cover;">
                                                         </a>
                                                         <!-- <div class="value-img">
                                                             <a href="img/project3.jpeg">
@@ -253,7 +254,7 @@
                                                         <div class="value-img">
                                                             <a href="img/project3.jpeg">
                                                                 <img class="img-custom" src="img/project3.jpeg"
-                                                                    alt="project3" />
+                                                                    alt="project3" style="object-fit: cover;" />
                                                             </a>
                                                         </div>
                                                         <!-- <img class="position-absolute img-fluid w-100 h-100"
@@ -286,7 +287,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <h1 class="mb-3">Kaushalyam</h1>
                                     <p class="mb-4">The site is a trapezoidal piece
                                         of expensive real estate.The brief called for utilizing maximum
@@ -303,13 +304,13 @@
                         </div>
                         <div class="tab-pane fade" id="tab-pane-4">
                             <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
+                                <div class="col-md-8" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/project4.jpeg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <h1 class="mb-3">Kothmire's Anantham</h1>
                                     <p class="mb-4">The house is spread on 2 levels,
                                         accommodating the elaborate user requirements,
