--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <div class="nav-item dropdown">
@@ -98,10 +98,10 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu border-0 m-0">
                         <a href="team.html" class="dropdown-item">Team Members</a>
-                        <a href="contact.html" class="dropdown-item">Contact</a>
+                        <a href="contact.html" class="dropdown-item active">Contact</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                     <div class="d-flex flex-column justify-content-between h-100">
                         <div class="bg-light d-flex align-items-center w-100 p-4 mb-4">
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark"
-                                style="width: 55px; height: 55px;">
+                                style="width: 55px; height: 55px; border-radius: 35px;">
                                 <i class="fa fa-map-marker-alt text-primary"></i>
                             </div>
                             <div class="ms-4">
@@ -149,7 +149,7 @@
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4 mb-4">
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark"
-                                style="width: 55px; height: 55px;">
+                                style="width: 55px; height: 55px; border-radius: 35px;">
                                 <a href="+919762717536">
                                     <i class="fa fa-phone-alt text-primary"></i>
                                 </a>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4">
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark"
-                                style="width: 55px; height: 55px;">
+                                style="width: 55px; height: 55px; border-radius: 35px;">
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
                             <div class="ms-4">
