--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                                     target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Shubham Lohe</h3>
                             <span class="text-primary">Principle Architect</span> <br>
                             <span class="text-primary">B.Arch.Mumbai , MA Arch CIG London
@@ -672,7 +672,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/PriyankaLaddad.png" alt="">
+                            <img class="img-fluid" src="img/PriyankaLaddad.jpeg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href="https://www.linkedin.com/in/priyanka-laddad-b8958a1a0"
@@ -680,7 +680,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Priyanka Laddad</h3>
                             <span class="text-primary">Senior Architect</span>
                         </div>
@@ -689,15 +689,14 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/03_Senior Architect_Ar.Praffulla Chavan (B.Arch.Mumbai).png"
-                                alt="">
+                            <img class="img-fluid" src="img/PraffullaChavan.jpeg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Praffulla Chavan</h3>
                             <span class="text-primary">Senior Architect</span>
                         </div>
@@ -706,8 +705,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/04_Interior Designer_Sakshi Lohe (BID.Pune , MIA).png"
-                                alt="">
+                            <img class="img-fluid" src="img/SakshiLohe.jpg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href="https://www.linkedin.com/in/sakshi-lohe-4b07b61b2"
@@ -715,7 +713,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Sakshi Lohe</h3>
                             <span class="text-primary">Interior Designer</span>
                         </div>
@@ -741,7 +739,7 @@
                         <div class="col-12">
                             <div class="d-flex">
                                 <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light"
-                                    style="width: 65px; height: 65px;">
+                                    style="width: 65px; height: 65px; border-radius:8px">
                                     <a href="+919762717536">
                                         <i class="fa fa-2x fa-phone-alt text-primary"></i>
                                     </a>
@@ -758,7 +756,7 @@
                         <div class="col-12">
                             <div class="d-flex">
                                 <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-light"
-                                    style="width: 65px; height: 65px;">
+                                    style="width: 65px; height: 65px; border-radius:8px">
                                     <a href="mailto:shubhamlohearchitects@gmail.com">
                                         <i class="fa fa-2x fa-envelope-open text-primary"></i>
                                     </a>
@@ -776,16 +774,19 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3">
                         <div class="col-12 col-sm-6">
-                            <input type="text" class="form-control" placeholder="Your Name" style="height: 55px;">
+                            <input type="text" class="form-control" placeholder="Your Name"
+                                style="height: 55px;border-radius: 8px;">
                         </div>
                         <div class="col-12 col-sm-6">
-                            <input type="email" class="form-control" placeholder="Your Email" style="height: 55px;">
+                            <input type="email" class="form-control" placeholder="Your Email"
+                                style="height: 55px;border-radius: 8px;">
                         </div>
                         <div class="col-12 col-sm-6">
-                            <input type="text" class="form-control" placeholder="Your Mobile" style="height: 55px;">
+                            <input type="text" class="form-control" placeholder="Your Mobile"
+                                style="height: 55px;border-radius: 8px;">
                         </div>
                         <div class="col-12 col-sm-6">
-                            <select class="form-select" style="height: 55px;">
+                            <select class="form-select" style="height: 55px; border-radius:8px">
                                 <option selected>Choose Service</option>
                                 <option value="Feasibility Report">Feasibility Report</option>
                                 <option value="Submission Drawings">Submission Drawings</option>
@@ -807,17 +808,20 @@
                         <div class="col-12 col-sm-6">
                             <div class="date" id="date" data-target-input="nearest">
                                 <input type="text" class="form-control datetimepicker-input" placeholder="Choose Date"
-                                    data-target="#date" data-toggle="datetimepicker" style="height: 55px;">
+                                    data-target="#date" data-toggle="datetimepicker"
+                                    style="height: 55px; border-radius:8px">
                             </div>
                         </div>
                         <div class="col-12 col-sm-6">
                             <div class="time" id="time" data-target-input="nearest">
                                 <input type="text" class="form-control datetimepicker-input" placeholder="Choose Date"
-                                    data-target="#time" data-toggle="datetimepicker" style="height: 55px;">
+                                    data-target="#time" data-toggle="datetimepicker"
+                                    style="height: 55px; border-radius:8px">
                             </div>
                         </div>
                         <div class="col-12">
-                            <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                            <textarea class="form-control" rows="5" placeholder="Message"
+                                style="border-radius: 8px;"></textarea>
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary w-100 py-3" type="submit">Book Appointment</button>
