--- a/team.html
+++ b/team.html
@@ -98,9 +98,9 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="team.html" class="dropdown-item">Team Members</a>
+                        <a href="team.html" class="dropdown-item active">Team Members</a>
                         <a href="contact.html" class="dropdown-item">Contact</a>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                                     target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Shubham Lohe</h3>
                             <span class="text-primary">Principle Architect</span>
                         </div>
@@ -165,7 +165,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Priyanka Laddad</h3>
                             <span class="text-primary">Senior Architect</span>
                         </div>
@@ -182,7 +182,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Praffulla Chavan</h3>
                             <span class="text-primary">Senior Architect</span>
                         </div>
@@ -200,7 +200,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Sakshi Lohe</h3>
                             <span class="text-primary">Interior Designer</span>
                         </div>
@@ -218,7 +218,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Nikhil Nawale</h3>
                             <span class="text-primary">Junior Architect</span>
                         </div>
@@ -236,7 +236,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Ar.Snehal Kale</h3>
                             <span class="text-primary">Junior Architect</span>
                         </div>
@@ -253,7 +253,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Architect Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
@@ -270,7 +270,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Architect Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
@@ -287,7 +287,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Architect Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
@@ -304,7 +304,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Architect Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
@@ -321,7 +321,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Architect Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
@@ -338,7 +338,7 @@
                                 <a class="btn btn-square" href="" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
-                        <div class="bg-light text-center p-4">
+                        <div class="bg-light text-center p-4" style="border-radius:0">
                             <h3 class="mt-2">Architect Name</h3>
                             <span class="text-primary">Designation</span>
                         </div>
