--- a/architecture.html
+++ b/architecture.html
@@ -68,15 +68,12 @@
   }
 
   .tabs-primary {
-    border: none;
-    outline: none;
-    padding: 10px 16px;
     cursor: pointer;
-    font-size: 18px;
-    text-align: center;
     margin: 20px;
-    width: 48px;
-    border-radius: 15px;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    display: inline-block;
   }
 
   /* Style the active class, and buttons on mouse-over */
@@ -141,13 +138,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
-        <a href="index.html" class="nav-item nav-link active">Home</a>
+        <a href="index.html" class="nav-item nav-link">Home</a>
         <a href="about.html" class="nav-item nav-link">About</a>
         <a href="service.html" class="nav-item nav-link">Services</a>
         <div class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Projects</a>
+          <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Projects</a>
           <div class="dropdown-menu border-0 m-0">
-            <a href="architecture.html" class="dropdown-item">Architecture</a>
+            <a href="architecture.html" class="dropdown-item active">Architecture</a>
             <a href="interior.html" class="dropdown-item">Interior</a>
           </div>
         </div>
@@ -189,15 +186,6 @@
         <h1 class="display-5 mb-4">Visit Our Latest Architecture Projects And Our Innovative Works</h1>
       </div>
       <div class="col-md-12">
-        <div class="tabs-container" id="myDIV">
-          <button onclick="myFunction1()" class="tabs-primary">1</button>
-          <button onclick="myFunction2()" class="tabs-primary activate">2</button>
-          <button onclick="myFunction3()" class="tabs-primary">3</button>
-          <button onclick="myFunction4()" class="tabs-primary">4</button>
-          <button onclick="myFunction5()" class="tabs-primary">5</button>
-          <button onclick="myFunction6()" class="tabs-primary">6</button>
-          <button onclick="myFunction7()" class="tabs-primary">7</button>
-        </div>
         <!-- <div class="project-tab">
           <a onclick="myFunction1()" id="myBtn1" class="btn btn-primary py-3 px-5 mt-3">1</a>
           <a onclick="myFunction2()" id="myBtn2" class="btn btn-primary py-3 px-5 mt-3">2</a>
@@ -208,7 +196,7 @@
           <a onclick="myFunction7()" id="myBtn7" class="btn btn-primary py-3 px-5 mt-3">7</a>
         </div> -->
         <div id="project1">
-          <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="row g-4 wow fadeIn" data-wow-delay="0.3s">
             <div class="col-lg-2">
               <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
                 <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 active"
@@ -411,7 +399,7 @@
                 </div>
 
 
-                <div class="tab-pane fade show active" id="tab-pane-3">
+                <div class="tab-pane fade" id="tab-pane-3">
                   <div class="row g-4">
                     <div class="col-md-8" style="min-height: 350px;">
                       <div class="position-relative h-100">
@@ -435,7 +423,7 @@
                 </div>
 
 
-                <div class="tab-pane fade show active" id="tab-pane-4">
+                <div class="tab-pane fade" id="tab-pane-4">
                   <div class="row g-4">
                     <div class="col-md-8" style="min-height: 350px;">
                       <div class="position-relative h-100">
@@ -1429,7 +1417,15 @@
         </div>
       </div>
 
-
+      <div class="tabs-container" id="myDIV">
+        <button onclick="myFunction1()" class="tabs-primary activate"></button>
+        <button onclick="myFunction2()" class="tabs-primary"></button>
+        <button onclick="myFunction3()" class="tabs-primary"></button>
+        <button onclick="myFunction4()" class="tabs-primary"></button>
+        <button onclick="myFunction5()" class="tabs-primary"></button>
+        <button onclick="myFunction6()" class="tabs-primary"></button>
+        <button onclick="myFunction7()" class="tabs-primary"></button>
+      </div>
 
     </div>
   </div>
