--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
-                <img class="img-fluid" src="img/Home Page - 1.jpg" alt="">
+                <img class="img-fluid" src="img/slide3.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -385,20 +385,19 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
                             <h3 class="mb-3">Feasibility Report</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
-                                stet diam sed stet.</p>
+                            <p class="mb-4">To conduct an architectural feasibility study we meet with the clients and
+                                discuss their ideas, their needs and wants.</p>
                             <a class="btn" href="service.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/project2.jpeg" alt="">
+                        <img class="bg-img" src="img/project4.jpeg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-6.png" alt="Icon">
                             <h3 class="mb-3">Submission Drawings</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
-                                stet diam sed stet.</p>
+                            <p class="mb-4">Municipal drawings, floor plans, elevations, sections.</p>
                             <a class="btn" href="service.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -409,8 +408,8 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
                             <h3 class="mb-3">Conceptual and preliminary design</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
-                                stet diam sed stet.</p>
+                            <p class="mb-4">Forming, modelling, shaping a new idea, approach, abstraction of an
+                                implementation.</p>
                             <a class="btn" href="service.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -421,20 +420,22 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
                             <h3 class="mb-3">Architectural and Interior design presentation</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
-                                stet diam sed stet.</p>
+                            <p class="mb-4">It's important not just to have those ideas in mind, but to clearly
+                                communicate them to clients through an Architecture
+                                and interior design presentation.</p>
                             <a class="btn" href="service.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/project5.jpeg" alt="">
+                        <img class="bg-img" src="img/project1.jpeg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
                             <h3 class="mb-3">Planning</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
-                                stet diam sed stet.</p>
+                            <p class="mb-4">Document study, analysis, site visit, site analysis , concept development,
+                                design solutions, sketches , views, client
+                                approval(sign off).</p>
                             <a class="btn" href="service.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -445,8 +446,8 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-10.png" alt="Icon">
                             <h3 class="mb-3">Landscaping</h3>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam
-                                stet diam sed stet.</p>
+                            <p class="mb-4">The development and decorative planting of gardens, yards, grounds, parks,
+                                and other planned green outdoor spaces.</p>
                             <a class="btn" href="service.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
@@ -464,17 +465,20 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
                     <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
-                    </p>
+                    <p class="mb-4">The most significant concepts of Shubham Lohe Architects work are simple elegant
+                        designs, timeless architecture and
+                        commitment to quality. Our architecture shows how plain geometry, layered definition of spaces
+                        and passion for quality,
+                        allows us to create clear and comprehensible spaces.</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
                                 <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Design Approach</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed
-                                        diam stet diam sed stet.</p>
+                                    <p class="mb-0">Firm believes that every project should respond to the site context
+                                        and evolve spaces that can be perceived in a new way
+                                        by the users.</p>
                                 </div>
                             </div>
                         </div>
@@ -483,8 +487,10 @@
                                 <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Innovative Solutions</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed
-                                        diam stet diam sed stet.</p>
+                                    <p class="mb-0">Evolving innovative design solutions that are contextual and
+                                        sustainable and creating spaces that are exhilarating to
+                                        experience while being functional, form the essence of the firm’s design
+                                        philosophy.</p>
                                 </div>
                             </div>
                         </div>
@@ -493,8 +499,9 @@
                                 <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Project Management</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed
-                                        diam stet diam sed stet.</p>
+                                    <p class="mb-0">Projects are designed and built on time and to budget while
+                                        protecting the integrity of the design and ensuring full
+                                        compliance with regulations and sustainability standards and benchmarks.</p>
                                 </div>
                             </div>
                         </div>
@@ -502,8 +509,8 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img">
-                        <img class="img-fluid" src="img/project2.jpeg" alt="">
-                        <img class="img-fluid" src="img/project1.jpeg" alt="">
+                        <img class="img-fluid" src="img/project4.jpeg" alt="">
+                        <img class="img-fluid" src="img/project6.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -528,7 +535,7 @@
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
-                            <h3 class="m-0">Ashiyana</h3>
+                            <h3 class="m-0">Popahale Meidcal</h3>
                         </button>
                         <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
@@ -564,23 +571,33 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="tab-pane-2">
-                            <div class="row g-8">
+                            <div class="row g-4">
+                                <!-- <div class="col-md-8" style="min-height: 350px;"> -->
                                 <div class="col-md-8" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project2.jpeg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project12.jpeg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
+                                <!-- </div> -->
                                 <div class="col-md-4">
-                                    <h1 class="mb-3">Ashiyana</h1>
-                                    <p class="mb-4">The house being sited in between a busy neighborhood,
-                                        the owners of this home felt the common dilemma of a requirement
-                                        of private living spaces surrounded by gardens.</p>
-                                    <p><i class="fa fa-user text-primary me-3"></i>Mr.Ghanshyam Navandar</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Built up area : 3750 Sq.ft</p>
-                                    <p><i class="fa fa-map-marker-alt text-primary me-3"></i>opp.Pawbaki road.Near
-                                        Rengne Gardern,Sangamner</p>
-                                    <a href="project.html" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
+                                    <h1 class="mb-3">Popahale Meidcal</h1>
+                                    <p class="mb-4">Spatial Architectural intent apart from providing
+                                        the clear floor plate for the Medical indoor, was to work on a passive
+                                        method of providing a better indoor environment. Provided well distributed
+                                        Natural light, Reducing the load on the air conditioning requirement and to
+                                        ensure
+                                        the noise from the street below was kept out, To the best extent possible
+                                        directs to the
+                                        idealogies of the design on an
+                                        initial platform.</p>
+                                    <p><i class="fa fa-user text-primary me-3"></i>Mr.Prashant,Sushant & Mr.Rushikesh
+                                        Popahale.</p>
+                                    <p><i class="fa fa-check text-primary me-3"></i>Built up area : 10,220 Sq.ft</p>
+                                    <p><i class="fa fa-map-marker-alt text-primary me-3"></i>Akole Bypass Near Petit
+                                        Highschool,
+                                        Sangamner.</p>
+                                    <!-- <a onclick="myFunction()" id="myBtn2" class="btn btn-primary py-3 px-5 mt-3">Next</a> -->
                                 </div>
                             </div>
                         </div>
@@ -732,9 +749,9 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Appointment</h4>
                     <h1 class="display-5 mb-4">Make An Appointment To Start Your Dream Project</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
+                    <!-- <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
                         eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
-                    </p>
+                    </p> -->
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex">
