--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
+        <!-- <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/SLALogo.jpg"
+            style="height: 100px; width: 100px;" alt="Icon"> -->
         <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/SLALogo.jpg"
             style="height: 100px; width: 100px;" alt="Icon">
-        <!-- <img class="position-absolute top-50 start-50 translate-middle" src="img/icons/SLALogoAlt.jpg" style="height: 100px; width: 100px;" alt="Icon"> -->
     </div>
     <!-- Spinner End -->
 
@@ -80,12 +81,9 @@
         data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <img class="text-primary m-0">
-            <img class="me-3" src="img/icons/SLALogoAlt.jpg" style="height: 100px; width: 270px; margin-left: -31px;"
-                alt="Icon">
-            <!-- <video width="50" height="50">
-                    <source src="img/icons/3d logo black background.wmv" type="video/wmv">
-                </video> -->
-            <!-- Shubham Lohe Architects -->
+
+            <img class="me-3" src="img/icons/SLALogo.jpg" style="height: 100px; width: 100px;" alt="Icon">
+            Shubham Lohe Architects
             </img>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -185,7 +183,8 @@
                             <img src="img/icons/icon-2.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Practice</h3>
-                        <p class="mb-0">The founders of SLA set up the studio in Sangamner, Maharashtra in 2020. Over
+                        <p class="mb-0" style="text-align: left;">The founders of SLA set up the studio in Sangamner,
+                            Maharashtra in 2020. Over
                             the years the studio has thrived with an
                             energetic team of architects led by Ar. Shubham Lohe (Sir J.J, Mumbai, India and
                             Westminster, London, U.K.)
@@ -212,7 +211,8 @@
                             <img src="img/icons/icon-3.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Range</h3>
-                        <p class="mb-0">Over the years, SLA’s work field spans a vast variety of cultures, climates and
+                        <p class="mb-0" style="text-align: left;">Over the years, SLA’s work field spans a vast variety
+                            of cultures, climates and
                             landscapes across the Indian
                             Subcontinent and across European countries. The project portfolio has an emphasis
                             on residential design of private
@@ -234,7 +234,8 @@
                             <img src="img/icons/icon-4.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Interdisciplinary Design</h3>
-                        <p class="mb-0">The practice works with a thorough understanding of Architecture and its related
+                        <p class="mb-0" style="text-align: left;">The practice works with a thorough understanding of
+                            Architecture and its related
                             fields. It seeks to develop design as
                             its core strength and primary focus. An energetic team of architects works intensively with
                             engineers, consultants,
@@ -262,7 +263,8 @@
                             <img src="img/icons/icon-2.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Scale</h3>
-                        <p class="mb-0">SLA works on a broad range of projects both in the public and private realm. We
+                        <p class="mb-0" style="text-align: left;">SLA works on a broad range of projects both in the
+                            public and private realm. We
                             enthral in jumping from the extreme of
                             the tiny scale of an architectural dollhouse to designing masterplans or thinking on complex
                             issues such as flooding.<br />
@@ -282,7 +284,8 @@
                             <img src="img/icons/icon-3.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Smart Solutions</h3>
-                        <p class="mb-0">Aesthetics, technological and environmentally friendly innovativeness are the
+                        <p class="mb-0" style="text-align: left;">Aesthetics, technological and environmentally friendly
+                            innovativeness are the
                             corner stones of its guiding philosophy.
                             Creating solutions for a context where scarcity affects architecture in multiple dimensions
                             is an inherent part of its
@@ -303,7 +306,8 @@
                             <img src="img/icons/icon-4.png" alt="Icon">
                         </div>
                         <h3 class="mb-3">Sustainable Design</h3>
-                        <p class="mb-0">The practice believes that there is a need to promote rapid, widespread
+                        <p class="mb-0" style="text-align: left;">The practice believes that there is a need to promote
+                            rapid, widespread
                             acceptance of sustainable solutions. However,
                             the challenge is to generate fresh ideas that carry out self-sufficient systems at scale.
                             The potentials of new building
