--- a/architecture.html
+++ b/architecture.html
@@ -128,10 +128,11 @@
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn"
     data-wow-delay="0.1s">
     <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-      <h1 class="text-primary m-0"><img class="me-3" src="img/icons/SLALogoAlt.jpg"
-          style="height: 100px; width: 270px; margin-left: -31px;" alt="Icon">
-      </h1>
-      </h1>
+      <img class="text-primary m-0">
+
+      <img class="me-3" src="img/icons/SLALogo.jpg" style="height: 100px; width: 100px;" alt="Icon">
+      Shubham Lohe Architects
+      </img>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
